--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nois da o cu</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body id="body">
+    <header>
+
+    </header>
     <section>
         <h1>
             Eu Quero Ir Morar no Cabaré
        </h1>
 
-      <p>Mussum Ipsum, cacilds vidis litro abertis.  Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Sapien in monti palavris qui num significa nadis i pareci latim. Si num tem leite então bota uma pinga aí cumpadi! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
-    <img src="./noisDaocu.webp" alt="Palhaço saindo da Caixa">
-  
+      <p>Mussum Ipsum, cacilds vidis litro abertis.  Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Sapien in monti palavris qui num significa nadis i paoni eu sit. Vide electram sadipscing et per.</p>
+    <img src="./BOYAH.webp" alt="Palhaço saindo da Caixa">
+     
     </section>
-    <p>booyah</p>
+    <button id = "butao" onclick="azul">BOTOOMMM</button>
+    <script src="gay.js"></script>
 </body>
 </html>
